- reenabled overflow-x: hidden to prevent lateral scrolling

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -135,7 +135,7 @@ body {
     flex-direction: column;
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 
     & > header, nav, footer {
         display: flex;
